--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sae-screenshot-service",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Servicio de capturas de pantalla para alertas de incursiones aéreas SAE-RADAR",
   "main": "src/index.js",
   "scripts": {
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "puppeteer": "^21.6.1",
+    "puppeteer-core": "^21.6.1",
     "cors": "^2.8.5"
   },
   "engines": {
